# Advent_Code_2022_Ocaml

./: .ocamlformat  README.md  adv_2022.opam  dune-project
lib/: day_eight.ml  day_eleven.ml  day_five.ml  day_four.ml  day_nine.ml  day_nine.txt  day_one.ml  day_seven.ml  day_six.ml  day_ten.ml  day_three.ml  day_two.ml  dune  jared.ml
questions/: 10.txt  11.txt
test/: dune
