(lang dune 3.11)

(name adv_2022)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "masterteapot")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name adv_2022)
 (synopsis "Ocaml Advent of Code 2022")
 (description "Done by yours truly")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
